launchpad-buildd (124) UNRELEASED; urgency=medium

  [ Adam Conrad ]
  * Update Standards-Version, and switch Conflicts to Breaks/Replaces.

  [ Colin Watson ]
  * Install ltsp-server (but not its Recommends) for i386 livefs builds, as
    Edubuntu needs it.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 24 Jun 2014 14:58:16 +0100

launchpad-buildd (123) hardy; urgency=medium

  * Fix handling of livefs builds for the -proposed pocket.
  * Accept an "extra_ppas" entry in livefs arguments, which is passed to
    livecd-rootfs to request that the image be built against additional
    PPAs.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 22 Jun 2014 16:10:44 +0100

launchpad-buildd (122) hardy; urgency=medium

  * Drop the status_dict XML-RPC method, now that the master uses the
    new-style dict-flavoured status method.
  * Don't add symlinks to the results of livefs builds (LP: #1247461).
  * Cope with builds that return multiple files with identical content.
  * If a build is aborted between subprocesses, pretend that it was
    terminated by a signal.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 13 May 2014 16:46:52 +0100

launchpad-buildd (121) hardy; urgency=medium

  * Retry "apt-get update" on failure after a short delay, as this
    occasionally fails due to racing with an archive pulse.
  * Go back to setting explicit values for LANG, LC_ALL, and LANGUAGE rather
    than unsetting them, since otherwise sudo/pam_env may fill in unwanted
    values from /etc/default/locale.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Jan 2014 13:40:40 +0000

launchpad-buildd (120) hardy; urgency=low

  [ Colin Watson ]
  * Unset LANG and LC_ALL rather than setting them to C, and unset a number
    of other environment variables too (including DISPLAY and TERM), in line
    with Debian buildds.
  * Make the status XML-RPC method a synonym for status_dict.
  * Add a new "livefs" build manager, based on livecd-rootfs/BuildLiveCD
    (LP: #1247461).