@@ -12,7 +12,6 @@ Depends: python-lpbuildd (=${source:Version}), python, debootstrap, dpkg-dev,
  linux32, file, bzip2, sudo, ntpdate, adduser, apt-transport-https, lsb-release,
  apache2, pristine-tar, python-apt, ${misc:Depends}
 Recommends: qemu-user-static
-Conflicts: sbuild
 Description: Launchpad buildd slave
  This is the launchpad buildd slave package. It contains everything needed to
  get a launchpad buildd going apart from the database manipulation required to
