@@ -1,3 +1,0 @@
-launchpad-buildd binary: binary-without-manpage usr/bin/buildd-genconfig
-launchpad-buildd binary: binary-without-manpage usr/bin/check-implicit-pointer-functions
-launchpad-buildd binary: binary-without-manpage usr/bin/sbuild
